newapp-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nodejs-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-nodejs-app
  template:
    metadata:
      labels:
        app: my-nodejs-app
    spec:
      containers:
        - name: my-nodejs-app
          image: omareltamasehy/newapp:v1
          ports:
            - containerPort: 3000
